# circulatio

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_2026_04_21.md  BATTLE_TEST_OVERVIEW.md  LICENSE  README.md  battle_test_harness.sh  demo.py  pyproject.toml
apps/hermes-rituals-web/: README.md  next.config.ts  package.json  playwright.config.ts
artifacts/hermes_real_host/: manual_qa_protocol.md  typology_journeys_report.json  typology_journeys_report.md  typology_journeys_trace.jsonl
battle_test_20260425_001630/: report.md
docs/: ARCHITECTURE.md  CONSOLIDATED_RITUAL_JOURNEY_PLAN.md  EMBODIED_GUIDANCE_SURFACE.md  EMBODIED_PRESENTATION_PLAN.md  ENGINEERING_GUIDE.md  HERMES_RITUALS_IMPLEMENTATION_PLAN.md  INTERPRETATION_ENGINE_SPEC.md  JOURNEY_CLI.md  JOURNEY_FAMILIES.md  JOURNEY_SESSION_ARCHITECT_PROMPT.md  PRESENTATION_LAYER.md  RITUAL_PLAYER_BOUNDARY.md  ROADMAP.md  RUNBOOK.md  SELF_EVOLUTION_OS.md  SUCCESS_VISION.md
hermes_plugin/circulatio/: __init__.py  plugin.yaml
scripts/: evaluate_circulatio_method.py  evaluate_hermes_real_host.py  evaluate_journey_cli.py  evolve_circulatio_method.py  hermes_host_smoke.py  record_ritual_completion.py  render_ritual_artifact.py
src/circulatio/: __init__.py
src/circulatio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/circulatio_hermes_plugin/: __init__.py  commands.py  plugin.yaml  ritual_handoff.py  runtime.py  schemas.py  tools.py
tests/: _helpers.py  journey_case_helpers.py  self_evolution_helpers.py  test_atropos_envs.py  test_circulatio_core.py  test_circulatio_service.py  test_coach_engine.py  test_context_builder.py  test_demo.py  test_evaluate_hermes_real_host.py  test_hermes_bridge_plugin.py  test_hermes_host_smoke.py  test_hermes_model_adapter.py  test_hermes_runtime_durability.py  test_journey_cli_eval.py  test_journey_experiment_host_surface.py  test_journey_families_bridge.py  test_journey_families_service.py  test_journey_followthrough_engine.py  test_memory_graph_scaffolding.py  test_method_self_evolution.py  test_method_state_projection.py  test_plugin_packaging_discovery.py  test_practice_engine.py  test_presentation_plan_service.py  test_prompt_builder.py  test_resource_engine.py  test_rhythmic_runtime.py  test_ritual_handoff.py  test_ritual_journey_cli.py  test_ritual_renderer_cli.py  test_self_evolution_artifacts.py  test_self_evolution_execution.py  test_self_evolution_judge.py  test_self_evolution_materializers.py  test_self_evolution_optimizer.py  test_thread_digests_projection.py  test_timestamps.py
tests/evals/: HERMES_CIRCULATIO_REAL_HOST_HARNESS.md
tools/journey_cli_eval/: __init__.py  adapters.default.yaml  adapters.py  browser_driver.py  cache.py  config.py  dataset.py  normalization.py  output_schema.py  process.py  prompts.py  reporting.py  ritual_mode.py  runner.py  scoring.py  traces.py  workspace.py
tools/ritual_renderer/: __init__.py  cli.py  contracts.py  renderer.py
tools/self_evolution/: __init__.py  artifacts.py  cache.py  constraints.py  dataset_builder.py  evaluator.py  fitness.py  (+10 more)
(+966 files in other folders)
